infra/k8s/techchallenge/ingress/tech-challenge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tech-challenge-ingress
  namespace: techchallenge
spec:
  ingressClassName: nginx
  rules:
    - host: fiap-techchallenge.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tech-challenge-app-service
                port:
                  number: 8357
